# detonator

./: .gitignore  CLAUDE.md  README.md  SPEC.md  config.example.toml  pyproject.toml  to-do.md
.claude/skills/detonator-run/: SKILL.md  run.py
agent/: README.md  api.py  config.py
agent/browser/: _driver.py  base.py  cdp_fetch_interceptor.py  cdp_response_tap.py  network_capture.py  playwright_chromium.py  route_document_interceptor.py  stealth.js
detonator/: config.py  egress_ctl.py  logging.py
detonator/analysis/: chain.py  filter.py  har_body_map.py  navigation.py
detonator/analysis/modules/: base.py  pipeline.py  sigma.py
detonator/analysis/rules/: blob_uri_redirect.yml  cloudflare_workers_abuse.yml  cross_origin_redirect.yml  data_uri_payload.yml  gcs_js_location_redirect.yml  gcs_phishing_host.yml  github_pages_phishing.yml  google_forms_harvester.yml  sharepoint_phishing.yml
detonator/enrichment/: base.py  dns.py  dom.py  favicon.py  har.py  pipeline.py  tld.py  tls.py  whois.py
detonator/enrichment/core/: __init__.py  dom.py  navigations.py
detonator/enrichment/plugins/: __init__.py  dns.py  favicon.py  hosting.py  tld.py  (+2 more)
detonator/models/: __init__.py  observables.py  run.py  vm.py
detonator/orchestrator/: agent_client.py  agent_manager.py  api.py  runner.py  state.py
detonator/storage/: database.py  filesystem.py  manifest.py
detonator/ui/: __init__.py  routes.py
docs/: tether-setup.md
scripts/: backfill_artifact_captured_at.py  capture_diff.py
tests/: test_agent_client.py  test_agent_manager.py  test_analysis_builtin.py  test_analysis_context_resources.py  test_analysis_pipeline.py  test_analysis_sigma.py  test_chain_filter.py  test_config.py  test_database.py  test_direct_egress.py  test_enrichment_dom.py  test_enrichment_hosting.py  test_enrichment_pipeline.py  test_enrichment_tls.py  test_filesystem.py  test_models.py  test_navigation_enricher.py  test_navigation_filter.py  test_orchestrator_api.py  test_proxmox_provider.py  test_runner.py  test_sigma_resource_rules.py  test_tether_egress.py  test_ui_helpers.py
tests/agent/: test_cdp_fetch_interceptor.py  test_cdp_response_tap.py  test_driver_smoke.py  test_network_capture.py
tests/analysis/: test_har_body_map.py
(+20 files in other folders)
