[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detonator"
version = "0.1.0"
description = "HAR-first URL detonation framework for malware and phishing analysis"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
]

[project.scripts]
detonator-egress = "detonator.egress_ctl:main"

[project.optional-dependencies]
proxmox = ["proxmoxer>=2.0", "requests>=2.31"]
enrichment = [
    "asyncwhois>=1.0",
    "dnspython>=2.6",
    "cryptography>=42.0",
    "mmh3>=4.1",
    "phonenumbers>=8.13",
]
analysis = ["pyyaml>=6.0"]
agent = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "playwright>=1.43",
    "patchright>=1.43",
]
ui = [
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
